Updated main.yml and main.tf

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,5 @@ jobs:
     uses: ./shared-deploy.yml
     with:
       environment: "dev"
+      backend-config-location: "./BackendConfig/dev-backend-config.tfvars"
     secrets: inherit
